--- a/dsl/shell_step_2.j2
+++ b/dsl/shell_step_2.j2
@@ -17,10 +17,10 @@ job('dsl_job') {
   }
 
   steps {
-    shell("""
+    shell('''
             AGE=26
             echo "Age is $AGE"
-          """)
+          ''')
   }
 
 }
